--- a/portfolio.html
+++ b/portfolio.html
@@ -29,9 +29,23 @@
         </nav>
 
         <ul class="auth-nav">
-          <li class="item"><a href="info@devstudio.com" class="link">info@devstudio.com</a></li>
-          <li class="item"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-        </ul>
+          <li class="item">
+            <a class="link" href="info@devstudio.com">
+              <svg class="auth-icon" width="16" height="12">
+                <use href="./images/symbol-defs.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
+          </li>
+          <li class="item">
+            <a class="link" href="tel:+380961111111">
+              <svg class="auth-icon" width="16" height="12">
+                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
+          </li>
+        </ul> 
       </div>
     </header>
 
@@ -40,6 +54,7 @@
       <!-- Наші проекти -->
       <section class="project">
         <div class="container">
+          <h1 class="visually-hidden">Наші проекти</h1>
           <ul class="button-group">
             <li class="item"><button type=" button" class="primery button">Усі</button></li>
             <li class="item"><button type=" button" class="secondary button">Веб-сайти</button></li>
@@ -47,7 +62,6 @@
             <li class="item"><button type=" button" class="secondary button">Дизайн</button></li>
             <li class="item"><button type=" button" class="secondary button">Маркетинг</button></li>
           </ul>
-          <h1 class="visually-hidden">Наші проекти</h1>
           <ul class="portfolio">
             <li class="element">
               <a class="link-image" href="">
@@ -136,12 +150,12 @@
     </main>
 
     <!--Футер-->
-    <footer>
-      <div class="container">
-        <a href="./index.html" class="logo"
+     <footer>
+      <div class="container footer-wrapper">
+        <div>
+          <a href="./index.html" class="logo"
           ><span class="right-accent">Web</span><span class="left-accent">Studio</span></a
         >
-
         <address>
           <ul class="navigation">
             <li>
@@ -160,6 +174,65 @@
               <a class="nav-auth" href="+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
+        </div>
+
+          <div class="container-join">
+            <p class="text-join">Приєднуйтесь</p>
+            <ul class="join-list">
+                <li>
+                  <a
+                    class="join-link list"
+                    href="https://instagram.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="Instagram"
+                  >
+                    <svg class="join-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="join-link list"
+                    href="https://twitter.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="Twitter"
+                  >
+                    <svg class="join-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="join-link list"
+                    href="https://www.facebook.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="Facebook"
+                  >
+                    <svg class="join-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-Vector"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a
+                    class="join-link list"
+                    href="https://www.linkedin.com"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    aria-label="Facebook"
+                  >
+                    <svg class="join-icon" width="20" height="20">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+          </div>
         </address>
       </div>
     </footer>
