--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <ul class="features">
             <li class="item-features">
               <div class="container-icon">
-                <svg class="icon-features">
+                <svg class="icon-features" width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -79,7 +79,7 @@
             </li>
             <li class="item-features">
               <div class="container-icon">
-                <svg class="icon-features">
+                <svg class="icon-features" width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -90,7 +90,7 @@
             </li>
             <li class="item-features">
               <div class="container-icon">
-                <svg class="icon-features">
+                <svg class="icon-features" width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -99,7 +99,7 @@
             </li>
             <li class="item-features">
               <div class="container-icon">
-                <svg class="icon-features">
+                <svg class="icon-features" width="70" height="70">
                   <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -383,43 +383,43 @@
           <ul class="regular-customers">
             <li>
               <a class="regular-icon" href="">
-                <svg class="customers-icon" width="41" height="46">
-                  <use href="./images/symbol-defs.svg#icon-Union"></use>
+                <svg class="customers-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-Logo"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="regular-icon" href="">
-                <svg class="customers-icon" width="42" height="52">
-                  <use href="./images/symbol-defs.svg#icon-group"></use>
+                <svg class="customers-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-Logo-2"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="regular-icon" href="">
-                <svg class="customers-icon" width="43" height="41">
-                  <use href="./images/symbol-defs.svg#icon-Object"></use>
+                <svg class="customers-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-Logo-3"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="regular-icon" href="">
-                <svg class="customers-icon" width="84" height="40">
-                  <use href="./images/symbol-defs.svg#icon-group-2"></use>
+                <svg class="customers-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-Logo-4"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="regular-icon" href="">
-                <svg class="customers-icon" width="62" height="45">
-                  <use href="./images/symbol-defs.svg#icon-group-3"></use>
+                <svg class="customers-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-Logo-5"></use>
                 </svg>
               </a>
             </li>
             <li>
               <a class="regular-icon" href="">
-                <svg class="customers-icon" width="94" height="44">
-                  <use href="./images/symbol-defs.svg#icon-Object-2"></use>
+                <svg class="customers-icon" width="106" height="60">
+                  <use href="./images/symbol-defs.svg#icon-Logo-6"></use>
                 </svg>
               </a>
             </li>
